--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -54,5 +54,18 @@ header {
     text-align: right;
   }
   footer a {
-    color: #024e76;
+        color: #024e76;}
+
+section {
+        padding: 60px;
+             }
+/* Hero Style Start */
+
+/* Hero Style Start */
+.hero {
+    background-image: url("../images/hero-bg.jpg");
+    height: 600px;
+    background-size: cover;
+    background-position: center;
   }
+  /* Hero Style End */
