background image changes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -60,12 +60,8 @@ section {
         padding: 60px;
              }
 /* Hero Style Start */
-
-/* Hero Style Start */
 .hero {
-    background-image: url("../images/hero-bg.jpg");
+    background-image: url("../assets/images/hero-bg.jpg");
     height: 600px;
-    background-size: cover;
-    background-position: center;
   }
   /* Hero Style End */
