--- a/assets/assets/css/style.css
+++ b/assets/assets/css/style.css
@@ -188,7 +188,7 @@ section {
   margin: 0 auto 30px auto;
   background: #024e76;
   color: #fce138;
-  overflow: auto
+  overflow: auto;
 }
 
 .trainer img {
@@ -200,14 +200,6 @@ section {
   padding: 35px;
   float: left;
   width: 65%;
-}
-
-.text-left {
-  text-align: left;
-}
-
-.text-right {
-  text-align: right;
 }
 
 .trainer-bio h3 {
@@ -226,6 +218,14 @@ section {
   line-height: 1.3;
 }
 
+.text-left {
+  text-align: left;
+}
+
+.text-right {
+  text-align: right;
+}
+
 /* REACH OUT STYLES START */
 .contact {
   text-align: center;
@@ -234,11 +234,6 @@ section {
 
 .contact h2 {
   color: #fce138;
-}
-
-.contact-info iframe {
-  width: 400px;
-  height: 400px;
 }
 
 .contact-info iframe {
@@ -260,7 +255,8 @@ section {
   font-size: 32px;
 }
 
-.contact-info p, .contact-info address {
+.contact-info p,
+.contact-info address {
   margin: 20px 0;
   line-height: 1.5;
   font-size: 20px;
@@ -272,4 +268,3 @@ section {
 }
 
 /* REACH OUT STYLES END */
-
