--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -150,10 +150,14 @@ section {
 /* SECTION TITLE STYLES START */
 .section-title {
   font-size: 55px;
-  display: inline-block;
-  padding: 0 100px 20px 100px;
+  padding-bottom: 20px;
+  text-align: center;
+  margin: 0 auto 35px auto;
+  width: 50%;
+  
+  
   border-bottom: 3px solid;
-  margin-bottom: 35px;
+  
   color: #024e76;
 }
 
@@ -177,13 +181,14 @@ section {
   width: 80%;
   margin: 0 auto;
   font-size: 20px;
+  text-align: center;
 }
 /* WHAT YOU DO STYLES END */
 
 
 /* WHAT YOU DO STYLES START */
 .steps { 
-  text-align: center;
+  
   background: #fce138;
 }
 
@@ -214,7 +219,7 @@ section {
 
 /* MEET THE TRAINERS START */
 .trainers {
-  text-align: center;
+  
 }
 
 .trainer {
@@ -255,7 +260,7 @@ section {
 
 /* REACH OUT STYLES START */
 .contact {
-  text-align: center;
+ 
   background: #024e76;
 }
 
@@ -303,4 +308,8 @@ height: 400px;
 
 .text-right {
   text-align: right;
+}
+
+.flex-row {
+  display: flex;
 }
