--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,11 +15,13 @@ body {
 header {
   padding: 20px 35px;
   background-color: #39a6b2;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
 }
 
 header h1 {
   font-weight: bold;
-  display: inline;
   margin: 0;
   font-size: 36px;
   color: #fce138;
@@ -31,18 +33,21 @@ header a {
 }
 
 header nav {
-  float: right;
   margin: 7px 0;
 }
 
-header nav ul li {
-  display: inline;
+header nav ul {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+  list-style: none;
 }
 
 header nav ul li a {
   margin: 0 30px;
   font-weight: lighter;
-  font-size: 22px;
+  font-size: 1.55vw;
 }
 
 /* HEADER / NAVBAR STYLES END */
@@ -53,18 +58,19 @@ header nav ul li a {
 footer {
   background: #fce138;
   padding: 40px 35px;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
   width: 100%;
 }
 
 footer h2 {
-  display: inline;
   color: #024e76;
   font-size: 30px;
   margin: 0;
 }
 
 footer div {
-  float: right;
   line-height: 1.5;
   text-align: right;
 }
@@ -87,17 +93,30 @@ section {
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
- 
+}
+
+.hero-cta {
+  width: 35%;
+  text-align: right;
+  margin: 3.5%;
+  color: #fff;
+  font-size: 18px;
+  line-height: 1.3;
+}
+
+.hero-cta h2 {
+  font-style: italic;
+  font-size: 55px;
+  color: #fce138;
 }
 
 .hero-form {
   border: 3px solid #024e76;
   background-color: #fce138;
   padding: 20px;
+  color: #024e76;
   width: 40%;
   margin: 3.5%;
-  color: #024e76;
- 
 }
 
 .hero-form h3 {
@@ -129,36 +148,18 @@ section {
   padding: 10px 20px;
   font-size: 16px;
 } 
-
-.hero-cta {
-  width: 35%;
-  text-align: right;
-  margin: 3.5%;
-  color: #fff;
-  font-size: 18px;
-  line-height: 1.3;
-}
-
-.hero-cta h2 {
-  font-style: italic;
-  font-size: 55px;
-  color: #fce138;
-}
 /* HERO STYLES END */
 
 
 /* SECTION TITLE STYLES START */
 .section-title {
   font-size: 55px;
+  border-bottom: 3px solid;
+  color: #024e76;
   padding-bottom: 20px;
   text-align: center;
   margin: 0 auto 35px auto;
   width: 50%;
-  
-  
-  border-bottom: 3px solid;
-  
-  color: #024e76;
 }
 
 .primary-border {
@@ -171,9 +172,6 @@ section {
 /* SECTION TITLE STYLES END */
 
 /* WHAT WE DO STYLES */
-.intro {
-  text-align: center;
-}
 
 .intro p {
   line-height: 1.7;
@@ -187,6 +185,9 @@ section {
 
 
 /* WHAT YOU DO STYLES START */
+.steps { 
+  background: #fce138;
+}
 
 .step {
   margin: 50px auto;
@@ -198,19 +199,6 @@ section {
   align-items: center;
   justify-content: space-between;
 }
-
-.steps { 
-  
-  background: #fce138;
-}
-
-.step-img {
-  flex: 1 12%;
-  margin-right: 20px;
-}
-
-
-
 
 .step h3 {
   color: #024e76;
@@ -225,6 +213,14 @@ section {
   align-items: center;
 }
 
+.step-img {
+  flex: 1 12%;
+  margin-right: 20px;
+}
+
+.step-img img {
+  max-width: 100%;
+}
 
 .step-text {
   flex: 12;
@@ -235,51 +231,41 @@ section {
   font-size: 18px;
 }
 
-.step-img img {
-  max-width: 100%;
-}
-
 .step-text h4 {
   font-size: 26px;
   line-height: 1.5;
   color: #024e76;
 }
+
 /* WHAT YOU DO STYLES END */
 
 /* MEET THE TRAINERS START */
-
 .trainers {
-    width: 100%;
-    margin: 0 auto;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-  }
-  
+  width: 100%;
+  margin: 0 auto;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
 }
 
 .trainer {
+  margin: 20px;
   flex: 1;
-  margin: 0 auto 20px auto;
   background: #024e76;
   color: #fce138;
-  
 }
 
 .trainer img {
   width: 100%;
-  
 }
 
 .trainer-bio {
   padding: 25px;
-  
   line-height: 1.3;
 }
 
 .trainer-bio h3 {
   font-size: 28px;
-  
 }
 
 .trainer-bio h4 {
@@ -290,13 +276,11 @@ section {
 
 .trainer-bio p {
   font-size: 17px;
-  
 }
 /* TRAINER STYLES END */
 
 /* REACH OUT STYLES START */
 .contact {
- 
   background: #024e76;
 }
 
@@ -304,17 +288,22 @@ section {
   color: #fce138;
 }
 
+.contact-info {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.contact-info > * {
+  flex: 1;
+  margin: 15px;
+}
+
 .contact-info iframe {
-  width: 400px;
-height: 400px;
+  height: 400px;
 }
 
 .contact-info div {
-  width: 410px;
-  display: inline-block;
-  vertical-align: top;
-  text-align: left;
-  margin: 30px 0 0 60px;
   color: white;
 }
 
@@ -326,8 +315,29 @@ height: 400px;
 .contact-info p, .contact-info address {
   margin: 20px 0;
   line-height: 1.5;
-  font-size: 20px;
+  font-size: 16px;
   font-style: normal;
+}
+
+.contact-form input, .contact-form textarea {
+  border: 1px solid #024e76;
+  display: block;
+  padding: 7px 15px;
+  font-size: 16px;
+  color: #024e76;
+  width: 100%;
+  margin-bottom: 15px;
+  margin-top: 5px;
+}
+
+.contact-form button {
+  width: 100%;
+  border: none;
+  background: #fce138;
+  color: #024e76;
+  text-align: center;
+  padding: 15px 0;
+  font-size: 16px;
 }
 
 .contact-info a {
